styles/index.css
/* purgecss start ignore */
@tailwind base;
@tailwind components;
/* purgecss end ignore */

html {
	font-family: "Inter", sans-serif;
}
@supports (font-variation-settings: normal) {
	html {
		font-family: "Inter var", sans-serif;
	}
}

body {
	overscroll-behavior-y: none;
	@apply w-screen;
}

nav .logo svg {
	@apply h-8 w-8 !important;
	/*color: #00ad71; */
}

@tailwind utilities;

.input {
	@apply bg-gray-200 border border-gray-200 p-2 rounded-md;
}

.pin-c-x {
	left: 50%;
	transform: translateX(-50%);
}

h1 {
	@apply text-3xl font-bold;
}

h2 {
	@apply text-2xl;
}

h3 {
	@apply text-xl;
}

h4 {
	@apply text-lg;
}

h5 {
	@apply text-sm;
}

small {
	@apply text-sm;
}

input {
	@apply bg-white px-2.5 py-1.5 rounded-md w-full block shadow-xs border border-gray-300 outline-none transition-all;
}

input:disabled {
	@apply bg-gray-100 text-gray-300;
}

input:focus {
	@apply border-green-300;
}

a {
	@apply text-green-500;
}

.force-block {
	display: block !important;
}
/* ... */

